--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -197,7 +197,7 @@ jobs:
       uses: actions/upload-artifact@v4
       if: success() || failure()
       with:
-        name: performance-(${{ matrix.os }})
+        name: performance-${{ matrix.os }}
         path: |
           ./artifacts/performance/**
 
