--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -136,7 +136,7 @@ jobs:
     - name: Get performance test filter
       id: get-perf-filter
       run: |
-        if (${{ env.RUN_FULL_PERF }} -eq 'true') {
+        if ('${{ env.RUN_FULL_PERF }}' -eq 'true') {
           echo "filter='*'" >> $env:GITHUB_OUTPUT
         } else {
           echo "filter='*FileCount: 1)'" >> $env:GITHUB_OUTPUT
