--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 *.userosscache
 *.sln.docstates
 
+# Repo uses MSBuild Traversal (dirs.proj) so .sln files shouldn't be checked in
+*.sln
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
