--- a/.github/workflows/devskim.yml
+++ b/.github/workflows/devskim.yml
@@ -7,11 +7,11 @@ name: DevSkim
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
   schedule:
-    - cron: '32 8 * * 1'
+    - cron: "32 8 * * 1"
 
 jobs:
   lint:
