--- a/.github/workflows/powershell.yml
+++ b/.github/workflows/powershell.yml
@@ -11,11 +11,11 @@ name: PSScriptAnalyzer
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
   schedule:
-    - cron: '19 22 * * 0'
+    - cron: "19 22 * * 0"
 
 permissions:
   contents: read
