fix: Update condition for uploading coverage history in CI workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,7 @@ jobs:
 
     - name: Upload coverage history
       uses: actions/upload-artifact@v4
-      if: success() && ${{ env.IS_TARGET_MAIN == 'true' }}
+      if: success() && env.IS_TARGET_MAIN == 'true'
       with:
         name: CoverageHistory-${{ matrix.os }}
         path: ./artifacts/TestResults/coveragehistory
