ci: Update labeler.yml to add PowerShell on PRs

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -34,3 +34,8 @@ github_actions:
 analyzers:
 - changed-files:
   - any-glob-to-any-file: ['src/Moq.Analyzers/AnalyzerReleases.*.md', 'src/Moq.Analyzers/**/*Analyzer.cs', 'src/Moq.Analyzers/**/*CodeFix.cs', 'src/Analyzers/**/*Analyzer.cs', 'src/CodeFixes/*Fixer.cs', 'src/Analyzers/AnalyzerReleases.*.md']
+
+# Add 'powershell' label to any change to a PowerShell file
+powershell:
+- changed-files:
+  - any-glob-to-any-file: ['*.ps1', '*.ps1x', '*.psm1', '*.psd1', '*.ps1xml', '*.pssc', '*.psrc', '*.cdxml']
