--- a/.github/workflows/label-issues.yml
+++ b/.github/workflows/label-issues.yml
@@ -41,6 +41,18 @@ jobs:
               labels.push(".NET")
             }
 
+            // Check if the body or title contains explainer or prd
+            if ((body != null && body.match(/explainer/i)) || (title != null && title.match(/explainer/i)) ||
+                (body != null && body.match(/prd/i)) || ((title != null && title.match(/prd/i))) {
+
+                labels.push("explainer")
+            }
+
+            // Check if the body or title contains "Tasks For"
+            if ((title != null && title.match(/Tasks for/i))) {
+                labels.push("epic")
+            }
+
             // Add the labels to the issue
             github.rest.issues.addLabels({
               issue_number: context.issue.number,
