--- a/.github/workflows/dependabot-approve-and-auto-merge.yml
+++ b/.github/workflows/dependabot-approve-and-auto-merge.yml
@@ -1,4 +1,4 @@
-name: Dependabot Pull Request Approve and Merge
+name: Dependabot or Rennovate Pull Request Approve and Merge
 on: pull_request_target
 permissions:
   pull-requests: write
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-24.04-arm
     # Checking the actor will prevent your Action run failing on non-Dependabot
     # PRs but also ensures that it only does work for Dependabot PRs.
-    if: ${{ github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]' }}
+    if: ${{ github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]' || github.actor == 'renovate[bot]' }}
     steps:
       # This first step will fail if there's no metadata and so the approval
       # will not occur.
